clean up styles, fix hero on mobile

--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -8,35 +8,24 @@
         height: 75vh;
         min-height: 584px;
         max-height: 1024px;
-        .hero-grid {
-            position: relative;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            height: 100%;
-            gap: 64px;
-            max-width: 1920px;
-            margin: auto;
-            align-items: center;
-            .button {
-                padding: 7px 12px;
-                svg {
-                    @include icon($size: 18px);
-                }
+        .button {
+            padding: 7px 12px;
+            svg {
+                @include icon($size: 18px);
             }
-            .split-button {
-                position: relative;
-                .menu-flyout-container {
-                    display: contents;
-                    &:last-child .button {
-                        padding: 0 8px;
-                        svg {
-                            @include icon($size: 12px);
-                        }
+        }
+        .split-button {
+            position: relative;
+            .menu-flyout-container {
+                display: contents;
+                &:last-child .button {
+                    padding: 0 8px;
+                    svg {
+                        @include icon($size: 12px);
                     }
                 }
             }
         }
-
         canvas {
             z-index: -1;
             opacity: 0.5;
@@ -46,9 +35,6 @@
             position: absolute;
             bottom: 0;
             right: 0;
-        }
-        .button svg {
-            @include icon($size: 18px);
         }
     }
     .style-standard .hero-button-inner {
@@ -65,6 +51,16 @@
 }
 
 .hero- {
+    &grid {
+        position: relative;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        height: 100%;
+        gap: 64px;
+        max-width: 1920px;
+        margin: auto;
+        align-items: center;
+    }
     &left {
         @include flex($direction: column, $justify: center);
         flex: 1 1 auto;
@@ -83,27 +79,27 @@
     }
     &right {
         height: 100%;
-        div {
-            @include flex($direction: row, $align: center);
-            width: 100%;
+        img {
+            position: absolute;
+            top: 0;
+            width: auto;
             height: 100%;
-            img {
-                position: absolute;
-                top: 0;
-                width: auto;
-                height: 100%;
-                -webkit-user-drag: none;
-                user-select: none;
-                aspect-ratio: 1280 / 960;
-                overflow: hidden;
-                box-shadow: var(--window-elevation);
-                border-radius: calc(var(--overlay-corner-radius) / 2);
-                background-color: var(--control-color-disabled);
-                border: 1px solid var(--surface-stroke-default);
-                border-radius: calc(var(--overlay-corner-radius) / 2);
-                backdrop-filter: blur(200px) saturate(150%);             
-            }
+            -webkit-user-drag: none;
+            user-select: none;
+            aspect-ratio: 1280 / 960;
+            overflow: hidden;
+            box-shadow: var(--window-elevation);
+            border-radius: calc(var(--overlay-corner-radius) / 2);
+            background-color: var(--control-color-disabled);
+            border: 1px solid var(--surface-stroke-default);
+            border-radius: calc(var(--overlay-corner-radius) / 2);
+            backdrop-filter: blur(200px) saturate(150%);             
         }
+    }
+    &image-container {
+        @include flex($direction: row, $align: center);
+        width: 100%;
+        height: 100%;
     }
 }
 
@@ -111,25 +107,24 @@
     :global(#hero-section) {
         height: auto;
         max-height: unset;
-        .hero-grid {
+    }
+    .hero- {
+        &grid {
             grid-template-columns: auto;
-            .hero- {
-                &left {
-                    text-align: center;
-                    align-items: center;
-                    .buttons-spacer {
-                        justify-content: center;
-                    }
-                }
-                &right img {
-                    position: relative;
-                    width: 100%;
-                    height: auto;
-                }
+        }
+        &left {
+            text-align: center;
+            align-items: center;
+            .buttons-spacer {
+                justify-content: center;
             }
         }
+        &right img {
+            position: relative;
+            width: 100%;
+            height: auto;
+        }
     }
-
 }
 
 :global {
